# Grassland-classic

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Grassland.sln
grassland/: CMakeLists.txt  Grassland.rc  Grassland.vcxproj  Grassland.vcxproj.filters  main.cpp  resource.h
grassland/include/: Grassland.h  GrasslandDecl.cpp  GrasslandDecl.h
grassland/include/Geometry/: Geometry.h  GeometryDecl.h
grassland/include/Graphics/: Graphics.cpp  Graphics.h
grassland/include/Graphics/2D/: Graphics2D.cpp  Graphics2D.h
grassland/include/Graphics/DirectX/: GraphicsDirectX.cpp  GraphicsDirectX.h  d3dx12.h
grassland/include/Graphics/OpenGL/: GL.h  (+24 more)
grassland/include/Math/: Math.h  MathDecl.cpp  MathDecl.h  MathDecl.inl  Matrix.h  Matrix2x2.h  Matrix2x2.inl  Matrix3x3.h  Matrix3x3.inl  Matrix4x4.h  Matrix4x4.inl  MatrixCommon.h  MatrixCommon.inl  Vector.h  Vector2.h  Vector2.inl  Vector3.h  Vector3.inl  Vector4.h  Vector4.inl
grassland/include/String/: String.cpp  String.h
grassland/shaders/: FragmentShader.glsl  FragmentShaderTex.glsl  VertexShader.glsl  VertexShaderTex.glsl
grassland/shaders/2d_shader/: d3d12_shaders.hlsl  vertex_shader.glsl
grassland/shaders/DirectX/: shaders.hlsl  simple_shader.hlsl
grassland/shaders/OpenGL/: gl2dellipsefs.glsl  gl2dellipsevs.glsl  gl2dimagefs.glsl  gl2dimagevs.glsl  gl2dtextfs.glsl  gl2dtextvs.glsl  gl2dtrianglefs.glsl  gl2dtrianglevs.glsl
grassland/shaders/cube_shader/: d3d12_shaders.hlsl  fragment_shader.glsl
grassland/shaders/simple_shader/: d3d12_shaders.hlsl  vertex_shader.glsl
(+136 files in other folders)
